Reverting main branch to commit 26c8703 (Safe Restoration)