@@ -67,7 +67,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>4.2.2</version>
+            <version>5.9.2</version>
         </dependency>
 
         <!-- EXTENT REPORTS ADAPTER -->
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.14.3</version>
+            <version>7.10.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -160,9 +160,9 @@
                 <version>3.13.0</version>
                 <configuration>
                     <release>21</release>
-<!--                    <compilerArgs>-->
-<!--                        <arg>&#45;&#45;enable-preview</arg>-->
-<!--                    </compilerArgs>-->
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
